# golem

./: .gitignore  API.md  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
.github/workflows/: ci.yaml
public/: index.html  script.js  style.css
public/css/: defaults.css
public/js/: ws.js
public/js/custom-elements/: ChatMessage.js
public/js/ws/: handleMessage.js
src/: auth.rs  logger.rs  main.rs  model.rs  routes.rs  templates.rs
src/auth/: hash.rs  token.rs  verify_session.rs
src/model/: database.rs  message.rs  room.rs  session.rs  snowflake.rs  user.rs
src/routes/: auth.rs  messages.rs  register.rs  sessions.rs  ws.rs
src/routes/ws/: broadcast_handler.rs  broadcast_msg.rs  presence.rs  recv.rs  session.rs  state.rs
src/routes/ws/recv/: msg.rs  msg_handler.rs
templates/: base.html  index.html  register.html  room.html
