[package]
name = "golem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
axum = "0.6.12"
axum-macros = "0.3.7"
log = "0.4.17"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.159", features = ["derive"] }
simple_logger = "4.1.0"
snowcloud = { version = "0.2.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
