[package]
name = "golem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
axum = { version = "0.6.12", features = ["headers", "ws"] }
axum-macros = "0.3.7"
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
humantime = "2.1.0"
log = "0.4.17"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
snowcloud = { version = "0.2.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
